<ScrollView
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="30dp">

    <LinearLayout
        android:id="@+id/map"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:visibility="visible"
            android:id="@+id/creds"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_trainer_username"/>

            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_trainer_password"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/login_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autoLink="web"
            android:text="@string/trainer_login_description"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:text="@string/logme_in"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/twitter"
            android:textSize="16sp"
            android:autoLink="web"
            android:layout_width="match_parent"
            android:text="@string/twitter_link"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</ScrollView>

