<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"/>


    <LinearLayout
        android:layout_below="@id/toolbar"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/creds"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_trainer_username"/>

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_trainer_password"/>
        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_centerHorizontal="true"
            android:id="@+id/add_account_btn"/>
    </LinearLayout>



    <android.support.v7.widget.RecyclerView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/account_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/creds"/>

</RelativeLayout>